# nothing-movies

./: .gitignore  ADDITIONAL_TERMS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  MOVIE_SOURCE.md  MOVIE_SOURCE_LICENSE.md  README.md  SECURITY.md  WARNING.md  package.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  movie_source_request.md
.github/workflows/: release-beta.yml  release-main.yml
app/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/include/core/: ISourceProvider.h  core.h
core/src/: core.cpp
downloader/: CMakeLists.txt
downloader/include/downloader/: downloader.h
downloader/src/: downloader.cpp
metadata_cache/: CMakeLists.txt
metadata_cache/include/metadata_cache/: metadata_cache.h
metadata_cache/src/: metadata_cache.cpp
movie_source1/: CMakeLists.txt
movie_source1/include/movie_source1/: movie_source1.h
movie_source1/src/: movie_source1.cpp
movie_source2/: CMakeLists.txt
movie_source2/include/movie_source2/: movie_source2.h
movie_source2/src/: movie_source2.cpp
player/: CMakeLists.txt
player/include/player/: player.h
player/src/: player.cpp
queue_manager/: CMakeLists.txt
queue_manager/include/queue_manager/: queue_manager.h
queue_manager/src/: queue_manager.cpp
scraper_core/: CMakeLists.txt
scraper_core/include/scraper_core/: ScraperEngine.h
scraper_core/src/: scraper_core.cpp
search_aggregator/: CMakeLists.txt
search_aggregator/include/search_aggregator/: search_aggregator.h
search_aggregator/src/: search_aggregator.cpp
tmdb_client/: CMakeLists.txt
tmdb_client/include/tmdb_client/: TitleCleaner.h  TmdbClient.h
tmdb_client/src/: TitleCleaner.cpp  TmdbClient.cpp
torrent_service/: CMakeLists.txt
torrent_service/include/torrent_service/: torrent_service.h
torrent_service/src/: torrent_service.cpp
ui/: CMakeLists.txt  resources.qrc
ui/include/ui/: AppController.h  MainWindow.h  PlayerPageWidget.h  QueueBridge.h  SearchBridge.h  TmdbBridge.h  VideoSurfaceWidget.h
ui/qml/: DownloadsScreen.qml  HomeScreen.qml  InfoScreen.qml  Main.qml  MovieCard.qml  MovieListItem.qml  NavItem.qml  PlayerScreen.qml  SearchScreen.qml  SettingsScreen.qml  Shell.qml  SourcesScreen.qml  Splash.qml  ThanksScreen.qml
ui/src/: PlayerPageWidget.cpp  QueueBridge.cpp  SearchBridge.cpp  TmdbBridge.cpp  VideoSurfaceWidget.cpp  main_window.cpp
vendor_updater/: CMakeLists.txt
vendor_updater/include/vendor_updater/: VendorUpdater.h
vendor_updater/src/: vendor_updater.cpp
